// =====================================================================
//  NGHIEP VU C - GIAO DICH TAI SAN
//  So do da rut gon, chi giu cac bang nghiep vu quan trong.
//  Cac bang duoc giu van dung field/khoa theo docs/database.dbml.
// =====================================================================

Table users {
  id int [pk, increment]
  username varchar(255) [not null, unique]
  fullname varchar(255) [not null]
  phone_number varchar(255)
  avatar_url varchar(255)
  address varchar(255)
  email varchar(255) [not null, unique]
  password varchar(255) [not null]
  failed_login_attempts int [not null, default: 0]
  last_failed_login_at datetime
  is_active boolean [default: 1]
  role_id int
  class_id int
  major_id int
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table assets {
  id int [pk, increment]
  name varchar(255) [not null]
  code varchar(255) [unique]
  description varchar(255)
  image_url varchar(255)
  category_id int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouses {
  id int [pk, increment]
  name varchar(255) [not null, unique]
  code varchar(255) [unique]
  address_id bigint
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table warehouse_asset {
  id int [pk, increment]
  asset_id int [not null]
  warehouse_id int [not null]
  quantity int [default: 0]
  maintenance_due datetime [default: `now()`]
  status int [default: 1]
  batch_code varchar(255) [not null, unique]
  expiration_date datetime [default: `now()`]
  manufacture_date datetime [default: `now()`]
  cost int [default: 0]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at datetime [not null, default: `now()`]
  updated_at datetime [not null, default: `now()`]
  deleted_at datetime
}

Table asset_transactions {
  id int [pk, increment]
  code varchar(255) [not null, unique]
  name varchar(255) [not null]
  warehouse_id int
  type int [not null]
  note varchar(255)
  reason varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_imports {
  id int [pk, increment]
  transaction_id int
  received_date timestamp [not null]
  sender_location varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_exports {
  id int [pk, increment]
  transaction_id int
  export_date timestamp [not null]
  receiver_name varchar(255) [not null]
  receiver_phone varchar(255)
  receiver_address varchar(255)
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_transaction_items {
  id int [pk, increment]
  transaction_id int
  warehouse_asset_id int
  quantity int [not null]
  cost int
  status int [not null, default: 1]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_lifecycle {
  id int [pk, increment]
  transaction_id int
  allocation_date timestamp
  return_deadline timestamp
  receiver_id int
  return_date date
  disposal_date date
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

Table asset_maintenances {
  id int [pk, increment]
  transaction_id int
  maintenance_date date [not null]
  status int [not null]
  created_by_user_id int
  modified_by_user_id int
  deleted_by_user_id int
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  deleted_at timestamp
}

// Relationships shown in this diagram.
Ref: users.created_by_user_id > users.id [delete: set null]
Ref: users.modified_by_user_id > users.id [delete: set null]
Ref: users.deleted_by_user_id > users.id [delete: set null]
Ref: assets.created_by_user_id > users.id [delete: set null]
Ref: assets.modified_by_user_id > users.id [delete: set null]
Ref: assets.deleted_by_user_id > users.id [delete: set null]
Ref: warehouses.created_by_user_id > users.id [delete: set null]
Ref: warehouses.modified_by_user_id > users.id [delete: set null]
Ref: warehouses.deleted_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.asset_id > assets.id [delete: cascade]
Ref: warehouse_asset.warehouse_id > warehouses.id [delete: cascade]
Ref: warehouse_asset.created_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.modified_by_user_id > users.id [delete: set null]
Ref: warehouse_asset.deleted_by_user_id > users.id [delete: set null]
Ref: asset_transactions.warehouse_id > warehouses.id [delete: set null]
Ref: asset_transactions.created_by_user_id > users.id [delete: set null]
Ref: asset_transactions.modified_by_user_id > users.id [delete: set null]
Ref: asset_transactions.deleted_by_user_id > users.id [delete: set null]
Ref: asset_imports.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_imports.created_by_user_id > users.id [delete: set null]
Ref: asset_imports.modified_by_user_id > users.id [delete: set null]
Ref: asset_imports.deleted_by_user_id > users.id [delete: set null]
Ref: asset_exports.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_exports.created_by_user_id > users.id [delete: set null]
Ref: asset_exports.modified_by_user_id > users.id [delete: set null]
Ref: asset_exports.deleted_by_user_id > users.id [delete: set null]
Ref: asset_transaction_items.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_transaction_items.warehouse_asset_id > warehouse_asset.id [delete: cascade]
Ref: asset_transaction_items.created_by_user_id > users.id [delete: set null]
Ref: asset_transaction_items.modified_by_user_id > users.id [delete: set null]
Ref: asset_transaction_items.deleted_by_user_id > users.id [delete: set null]
Ref: asset_lifecycle.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_lifecycle.receiver_id > users.id [delete: set null]
Ref: asset_lifecycle.created_by_user_id > users.id [delete: set null]
Ref: asset_lifecycle.modified_by_user_id > users.id [delete: set null]
Ref: asset_lifecycle.deleted_by_user_id > users.id [delete: set null]
Ref: asset_maintenances.transaction_id > asset_transactions.id [delete: cascade]
Ref: asset_maintenances.created_by_user_id > users.id [delete: set null]
Ref: asset_maintenances.modified_by_user_id > users.id [delete: set null]
Ref: asset_maintenances.deleted_by_user_id > users.id [delete: set null]

// Da luoc bo log_actions, log_controllers, kqn_logs vi log khong phai luong giao dich tai san chinh.
// Da luoc bo categories/address trong so do C; chi giu assets, warehouses va warehouse_asset lam ngu canh truc tiep cho giao dich.
// assets.category_id va warehouses.address_id van la field that trong DB; categories/address khong ve o so do C de giu gon.
// users.role_id, users.class_id, users.major_id van la field that trong DB; cac bang lien quan khong ve o so do C.

